[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

project_urls =
    Documentation = https://requests.readthedocs.io
    Source = https://github.com/psf/requests

[options]
packages = requests
package_dir = 
    requests = requests

zip_safe = False
install_requires =
    chardet>=3.0.2,<3.1.0
    idna>=2.5,<2.9
    urllib3>=1.21.1,<1.26,!=1.25.0,!=1.25.1
    certifi>=2017.4.17

include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
tests_require =
    pytest-httpbin==0.0.7
    pytest-cov
    pytest-mock
    pytest-xdist
    PySocks>=1.5.6, !=1.5.7
    pytest>=3

[options.extras_require]
security =
    pyOpenSSL >= 0.14
    cryptography>=1.3.4
    idna>=2.0.0
socks =
    PySocks>=1.5.6, !=1.5.7
    win_inet_pton; sys_platform == "win32" and python_version == "2.7" 

[options.package_data]
"" =
    LICENSE
    NOTICE

requests = *.pem

[bdist_wheel]
universal = 1
