[metadata]
license_file = LICENSE
provides-extra =
    socks
    use_chardet_on_py3
requires-dist =
    certifi>=2017.4.17
    charset_normalizer>=2,<4
    idna>=2.5,<4
    urllib3>=1.21.1,<3

[flake8]
ignore = E203, E501, W503
per-file-ignores =
    src/requests/__init__.py:E402, F401
    src/requests/compat.py:E402, F401
    tests/compat.py:F401
